@@ -258,8 +258,6 @@ static 	SEL selUpdate = NULL;
 -(void) draw
 {
 	// Optimization: Fast Dispatch
-	typedef BOOL (*UPDATE_IMP)(id, SEL);
-	UPDATE_IMP updateMethod;
 	CCSprite *child;
 	
 	if( textureAtlas_.totalQuads == 0 )
@@ -274,13 +272,12 @@ static 	SEL selUpdate = NULL;
 		
 		// compile the update methodf
 		child = array->arr[0];
-		updateMethod = (UPDATE_IMP) [child methodForSelector:selUpdate];
 
 		while (i-- > 0) {
 			child = *arr++;
 			
 			// fast dispatch
-			updateMethod(child, selUpdate);
+			child->updateMethod(child, selUpdate);
 			
 #if CC_SPRITEBATCHNODE_DEBUG_DRAW
 			//Issue #528
