@@ -1,7 +1,8 @@
 version 0.99.5 - xx-Dec-2010
+. [FIX] Configuration: checks for possible glErrors. Only ask for max samples if iOS >= 4 (issue #1041)
 . [FIX] FileUtils: loads .gz / .ccz files correctly in RetinaDisplay mode (issue #1037)
 . [FIX] FileUtils: fixed big memory leaks on .ccz inflater
-. [FIX] Configuration: checks for possible glErrors. Only ask for max samples if iOS >= 4 (issue #1041)
+. [FIX] Sprite: updateTransform can be overriden (issue #824)
 . [TEST] Added Glyph Designer test case
  
 version 0.99.5-rc1 - 15-Nov-2010
